panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__enum__test_enum_without_explicit_values_enumerators.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/enum/test_enum_without_explicit_values_enumerators.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_without_explicit_values_enumerators.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (enum E~1
      (enumerators ∅
         (enumerator A~2 `enum E~1`.0 ∅)
         (enumerator B~3 `enum E~1`.1 ∅)
         (enumerator C~4 `enum E~1`.2 ∅)
         (enumerator D~5 `enum E~1`.3 ∅)))
   (declaration b~6 `int` (enumerator B~3 `enum E~1 complete`.1 ∅))
   (function-definition
      main~7 `fn() -> int`
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d + %d + %d == %d\n")
               (enumerator A~2 `enum E~1 complete`.0 ∅)
               (name b~6 `int`)
               (enumerator D~5 `enum E~1 complete`.3 ∅)
               (add (add (enumerator A~2 `enum E~1 complete`.0 ∅) (name b~6 `int`)) (enumerator D~5 `enum E~1 complete`.3 ∅))))
         (return (enumerator C~4 `enum E~1 complete`.2 ∅)))))

----- stderr -----
